@@ -110,3 +110,5 @@ Version 1.4.1
 * Increased acceptable comparators of RubyArray#sortByǃ
 
 * Changed RubyHash entries to ComparableEntry
+
+* Fixed the bug of RubyFile#join
